Fix header title that overlaps since the last commit. 	modified:   assets/stylesheets/_blog.scss

--- a/assets/stylesheets/_blog.scss
+++ b/assets/stylesheets/_blog.scss
@@ -18,7 +18,6 @@
 
 	h1 {
 		font-size: 2em;
-		line-height: 3em;
 	}
 
 	h2 {
